--- a/mui.3
+++ b/mui.3
@@ -7,9 +7,8 @@
 .Sh DESCRIPTION
 .Sy mui 
 is a minimalist UI library for X11 that utilizes xcb.
-.sp
 .Sh BASICS
-Before doing anything the library must first be included then a window
+Before doing anything, the library must first be included then a window
 can be created.
 .Sh AUTHORS
 Onana Onana Xavier Manuel 
